v3.10.7 (XXXX-XX-XX)
--------------------


* Improved error reporting for system calls on Windows and fixed a
  Windows-specific issue of the IOHeartbeatThread.

* BTS-1181: fix a data race on the collection list in TransactionState
  This race could happen in the cluster when a collection is sharded by a
  different attribute than `_key` and a document lookup by _key is performed.
  This requires the lookup to be sent to each shard, since we cannot deduce
  the shard based on the `_key` value. If this lookup is done as part of a
  stream transaction, and if the collection has not been declared in the
  transaction's `read` list, then the collection is added lazily. Previously
  this would result in a race if multiple shards are located on the same
  server.
  For transactions with `allowDirtyReads` set to true read collections are
  always added lazily, which made this race more likely.

* Updated arangosync to v2.17.9.

* Fixed issue #18942: arangorestore ignores the HTTP status code.

* Fixed BTS-1398: GEO_DISTANCE() for ArangoSearch geo_s2 analyzer.

* Fix MDS-1070 Update iresearch submodule.

* Updated arangosync to v2.17.0.

* FE-243: add support for geo_s2 analyzer.

* FE-22: Don't display collection content by default when clicking on a
  collection in the Web UI.

* Fix incompatibility between 3.9 and 3.10 w.r.t. to serialization of AQL array
  filters (i.e. `[* FILTER ...]`). The array filters were serialized in a
  different way in 3.9 than they are serialized in 3.10. 3.10 also expected the
  new serialization format when unserializing a plan.
  The fix now enables support for both formats.

* Fixed unstable test setting the desired number of servers.

* FE-238: Added auto-login support in core web UI - disabled logout when
  auto-login is enabled, set sessionStorage "jwtUser" value when login is
  skipped.

* Fixed a race in the Maintenance, impacting leaders that have just been