@@ -2014,12 +2014,7 @@
                 }
               } else if (geometry.type === 'Polygon' || geometry.type === 'LineString' || geometry.type === 'MultiLineString' || geometry.type === 'MultiPolygon') {
                 try {
-                  geojson = new L.GeoJSON(geometry, {
-                    style: geoStyle,
-                    onEachFeature: function (feature, layer) {
-                      layer.bindPopup('<pre style="width: 250px;">' + JSON.stringify(feature, null, 2) + '</pre>');
-                    }
-                  }).addTo(self.maps[counter]);
+                  geojson = new L.Geodesic().fromGeoJson(geometry).addTo(self.maps[counter]);
                   markers.push(geojson);
                 } catch (ignore) {
                   invalidGeoJSON++;
